--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,6 +10,9 @@ pipeline {
         stage('Checkout Code') {
             steps {
                 git branch: 'main', url: 'https://github.com/ericflkbg/OpenPLC_v3.git'
+                script {
+                    sh 'ls -la'
+                }
             }
         }
 
