--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
         IMAGE_NAME = "openplc"
         IMAGE_TAG = "latest"
         TRIVY_SERVER = "http://172.18.0.5:4954"
-        NEXUS_REPO = "172.18.0.4:5000/docker-repo" // Korrigierte IP-Adresse der Nexus-Registry und Repository-Name
+        NEXUS_REPO = "localhost:8081/repository/docker-repo" // Korrigierte URL der Nexus-Registry und Repository-Name
     }
 
     stages {
@@ -45,6 +45,11 @@ pipeline {
                 script {
                     echo "Tagging Docker image for Nexus repository..."
                     sh "docker tag ${IMAGE_NAME}:${IMAGE_TAG} ${NEXUS_REPO}/${IMAGE_NAME}:${IMAGE_TAG}"
+
+                    echo "Logging in to Nexus registry..."
+                    withCredentials([usernamePassword(credentialsId: '7211db4a-9c31-434c-8a12-44e0667143fb', passwordVariable: 'NEXUS_PASSWORD', usernameVariable: 'NEXUS_USERNAME')]) {
+                        sh "docker login ${NEXUS_REPO} -u ${NEXUS_USERNAME} -p ${NEXUS_PASSWORD}"
+                    }
 
                     echo "Pushing Docker image to Nexus..."
                     sh "docker push ${NEXUS_REPO}/${IMAGE_NAME}:${IMAGE_TAG}"
