--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,6 +16,15 @@ pipeline {
             }
         }
 
+        stage('Lint Dockerfile') {
+            steps {
+                script {
+                    echo "Running Hadolint to check Dockerfile..."
+                    sh 'docker run --rm -i hadolint/hadolint < Dockerfile || true'
+                }
+            }
+        }
+
         stage('Build Docker Image') {
             steps {
                 sh "docker build -t ${IMAGE_NAME}:${IMAGE_TAG} ."
