--- a/jenkinsfile
+++ b/jenkinsfile
@@ -101,6 +101,56 @@ pipeline {
                 }
             }
         }
+
+        stage('Deploy OpenPLC') {
+            steps {
+                script {
+                    echo "Starting OpenPLC in production network..."
+                    sh '''
+                    docker stop openplc || true
+                    docker rm openplc || true
+                    docker run -d --name openplc --network=live-network -p 9090:8080 \
+                      ${NEXUS_REPO}/${IMAGE_NAME}:${IMAGE_TAG}
+                    '''
+                }
+            }
+        }
+
+        stage('Deploy Prometheus') {
+            steps {
+                script {
+                    echo "Starting Prometheus in production network..."
+                    sh '''
+                    docker stop prometheus || true
+                    docker rm prometheus || true
+                    echo 'global:
+  scrape_interval: 5s
+scrape_configs:
+  - job_name: "openplc"
+    static_configs:
+      - targets: ["openplc:8080"]' > prometheus.yml
+
+                    docker run -d --name prometheus --network=live-network \
+                      -p 9091:9090 -v $(pwd)/prometheus.yml:/etc/prometheus/prometheus.yml \
+                      prom/prometheus
+                    '''
+                }
+            }
+        }
+
+        stage('Deploy Grafana') {
+            steps {
+                script {
+                    echo "Starting Grafana in production network..."
+                    sh '''
+                    docker stop grafana || true
+                    docker rm grafana || true
+                    docker run -d --name grafana --network=live-network \
+                      -p 3000:3000 grafana/grafana
+                    '''
+                }
+            }
+        }
     }
 
     post {
