--- a/jenkinsfile
+++ b/jenkinsfile
@@ -41,17 +41,20 @@ pipeline {
                 script {
                     withCredentials([usernamePassword(credentialsId: '7211db4a-9c31-434c-8a12-44e0667143fb', usernameVariable: 'NEXUS_USER', passwordVariable: 'NEXUS_PASS')]) {
                         sh """
-                        mkdir -p \$(pwd)/trivy_scan
-
+                        TRIVY_DIR=\$(pwd)/trivy_scan  
+                        mkdir -p \$TRIVY_DIR  
+                        
+                        echo "Scanning Docker Image: ${IMAGE_NAME}:${IMAGE_TAG}"  
                         docker run --rm --network jenkins \
                         -v /var/run/docker.sock:/var/run/docker.sock \
-                        -v \$(pwd)/trivy_scan:/workspace \
-                        aquasec/trivy image --server ${TRIVY_SERVER} \
-                        --format json --output /workspace/trivy-results.json --severity HIGH,CRITICAL ${IMAGE_NAME}:${IMAGE_TAG}
+                        -v \$TRIVY_DIR:/workspace \
+                        aquasec/trivy image --format json --output /workspace/trivy-results.json --severity HIGH,CRITICAL ${IMAGE_NAME}:${IMAGE_TAG}
+                        
+                        echo "Listing Trivy Output Directory:"
+                        ls -la \$TRIVY_DIR  
 
-                        ls -la \$(pwd)/trivy_scan  
-
-                        curl -k -u \$NEXUS_USER:\$NEXUS_PASS --upload-file trivy_scan/trivy-results.json \
+                        echo "Uploading Trivy Report to Nexus..."
+                        curl -k -v -u \$NEXUS_USER:\$NEXUS_PASS --upload-file \$TRIVY_DIR/trivy-results.json \
                         ${NEXUS_URL}/repository/trivy-results/trivy-results-\$(date +%Y%m%d%H%M%S).json
                         """
                     }
