--- a/jenkinsfile
+++ b/jenkinsfile
@@ -44,23 +44,16 @@ pipeline {
                         rm -f /var/jenkins_home/workspace/cra_check_pipeline/trivy_scan/trivy-results.json || true
                         mkdir -p /var/jenkins_home/workspace/cra_check_pipeline/trivy_scan
 
-                        echo "Scanning Docker Image: ${IMAGE_NAME}:${IMAGE_TAG}"
                         docker run --rm --network jenkins \
                         -v /var/run/docker.sock:/var/run/docker.sock \
                         -v /var/jenkins_home/workspace/cra_check_pipeline/trivy_scan:/workspace \
-                        aquasec/trivy image --format json --output /workspace/trivy-results.json --severity HIGH,CRITICAL ${IMAGE_NAME}:${IMAGE_TAG}
+                        aquasec/trivy image --server ${TRIVY_SERVER} \
+                        --format json --output /workspace/trivy-results.json --severity HIGH,CRITICAL ${IMAGE_NAME}:${IMAGE_TAG}
 
-                        echo "Listing Trivy-Scan directory:"
                         ls -la /var/jenkins_home/workspace/cra_check_pipeline/trivy_scan
 
-                        if [ -f /var/jenkins_home/workspace/cra_check_pipeline/trivy_scan/trivy-results.json ]; then
-                            echo "Uploading to Nexus..."
-                            curl -k -v -u \$NEXUS_USER:\$NEXUS_PASS --upload-file /var/jenkins_home/workspace/cra_check_pipeline/trivy_scan/trivy-results.json \
-                            ${NEXUS_URL}/repository/trivy-results/trivy-results-\$(date +%Y%m%d%H%M%S).json
-                        else
-                            echo "ERROR: Trivy-Scan-Report missing!"
-                            exit 1
-                        fi
+                        curl -k -v -u \$NEXUS_USER:\$NEXUS_PASS --upload-file /var/jenkins_home/workspace/cra_check_pipeline/trivy_scan/trivy-results.json \
+                        ${NEXUS_URL}/repository/trivy-results/trivy-results-\$(date +%Y%m%d%H%M%S).json
                         """
                     }
                 }
