--- a/jenkinsfile
+++ b/jenkinsfile
@@ -41,18 +41,14 @@ pipeline {
                 script {
                     withCredentials([usernamePassword(credentialsId: '7211db4a-9c31-434c-8a12-44e0667143fb', usernameVariable: 'NEXUS_USER', passwordVariable: 'NEXUS_PASS')]) {
                         sh """
-                        rm -f /var/jenkins_home/workspace/cra_check_pipeline/trivy_scan/trivy-results.json || true
-                        mkdir -p /var/jenkins_home/workspace/cra_check_pipeline/trivy_scan
-
                         docker run --rm --network jenkins \
                         -v /var/run/docker.sock:/var/run/docker.sock \
-                        -v /var/jenkins_home/workspace/cra_check_pipeline/trivy_scan:/workspace \
                         aquasec/trivy image --server ${TRIVY_SERVER} \
-                        --format json --output /workspace/trivy-results.json --severity HIGH,CRITICAL ${IMAGE_NAME}:${IMAGE_TAG}
+                        --format json --output trivy-results.json --severity HIGH,CRITICAL ${IMAGE_NAME}:${IMAGE_TAG}
 
-                        ls -la /var/jenkins_home/workspace/cra_check_pipeline/trivy_scan
+                        ls -la
 
-                        curl -k -v -u \$NEXUS_USER:\$NEXUS_PASS --upload-file /var/jenkins_home/cra_check_pipeline/trivy_scan/trivy-results.json \
+                        curl -k -v -u \$NEXUS_USER:\$NEXUS_PASS --upload-file trivy-results.json \
                         ${NEXUS_URL}/repository/trivy-results/trivy-results-\$(date +%Y%m%d%H%M%S).json
                         """
                     }
