--- a/jenkinsfile
+++ b/jenkinsfile
@@ -44,11 +44,18 @@ pipeline {
                         docker run --rm --network jenkins \
                         -v /var/run/docker.sock:/var/run/docker.sock \
                         aquasec/trivy image --server ${TRIVY_SERVER} \
-                        --format json --output trivy-results.json --severity HIGH,CRITICAL ${IMAGE_NAME}:${IMAGE_TAG}
+                        --format json --output /trivy-results.json --severity HIGH,CRITICAL ${IMAGE_NAME}:${IMAGE_TAG}
 
+                        echo "Überprüfe Trivy-Scan-Ausgabe"
+                        docker run --rm --network jenkins aquasec/trivy image --server ${TRIVY_SERVER} --severity HIGH,CRITICAL ${IMAGE_NAME}:${IMAGE_TAG}
+
+                        echo "Überprüfe Container-Speicherort"
+                        docker run --rm aquasec/trivy ls -la /
+
+                        echo "Überprüfe Jenkins-Workspace"
                         ls -la
 
-                        curl -k -v -u \$NEXUS_USER:\$NEXUS_PASS --upload-file trivy-results.json \
+                        curl -k -v -u \$NEXUS_USER:\$NEXUS_PASS --upload-file /trivy-results.json \
                         ${NEXUS_URL}/repository/trivy-results/trivy-results-\$(date +%Y%m%d%H%M%S).json
                         """
                     }
