--- a/jenkinsfile
+++ b/jenkinsfile
@@ -43,14 +43,18 @@ pipeline {
                         sh """
                         docker run --rm --network jenkins \
                         -v /var/run/docker.sock:/var/run/docker.sock \
-                        -v \$(pwd):/workspace \
+                        -v /var/jenkins_home/workspace/cra_check_pipeline:/workspace \
                         aquasec/trivy image --server ${TRIVY_SERVER} \
                         --format json --output /workspace/trivy-results.json --severity HIGH,CRITICAL ${IMAGE_NAME}:${IMAGE_TAG}
 
                         echo "Überprüfe Trivy-Scan-Ausgabe"
-                        ls -la
+                        ls -la /var/jenkins_home/workspace/cra_check_pipeline
 
-                        curl -k -v -u \$NEXUS_USER:\$NEXUS_PASS --upload-file /workspace/cra_check_pipeline/trivy-results.json \
+                        echo "Setze Berechtigungen für Jenkins"
+                        sudo chown -R jenkins:jenkins /var/jenkins_home/workspace/cra_check_pipeline/trivy-results.json
+                        sudo chmod 644 /var/jenkins_home/workspace/cra_check_pipeline/trivy-results.json
+
+                        curl -k -v -u \$NEXUS_USER:\$NEXUS_PASS --upload-file /var/jenkins_home/workspace/cra_check_pipeline/trivy-results.json \
                         ${NEXUS_URL}/repository/trivy-results/trivy-results-\$(date +%Y%m%d%H%M%S).json
                         """
                     }
