--- a/jenkinsfile
+++ b/jenkinsfile
@@ -41,15 +41,20 @@ pipeline {
                 script {
                     withCredentials([usernamePassword(credentialsId: '7211db4a-9c31-434c-8a12-44e0667143fb', usernameVariable: 'NEXUS_USER', passwordVariable: 'NEXUS_PASS')]) {
                         sh """
-                        docker run --rm --network jenkins \
+                        echo "Starte Trivy-Scan"
+                        docker run --name trivy_scan_container --network jenkins \
                         -v /var/run/docker.sock:/var/run/docker.sock \
                         -v /var/jenkins_home/workspace/cra_check_pipeline:/workspace \
                         aquasec/trivy image --server ${TRIVY_SERVER} \
                         --format json --output /workspace/trivy-results.json --severity HIGH,CRITICAL ${IMAGE_NAME}:${IMAGE_TAG}
-
+                        
                         echo "Überprüfe Trivy-Scan-Ausgabe"
                         ls -la /var/jenkins_home/workspace/cra_check_pipeline
 
+                        echo "Entferne Trivy-Container"
+                        docker rm trivy_scan_container || true
+
+                        echo "Sende Scan-Report an Nexus"
                         curl -k -v -u \$NEXUS_USER:\$NEXUS_PASS --upload-file /var/jenkins_home/workspace/cra_check_pipeline/trivy-results.json \
                         ${NEXUS_URL}/repository/trivy-results/trivy-results-\$(date +%Y%m%d%H%M%S).json
                         """
