--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     environment {
         IMAGE_NAME = "openplc"
         IMAGE_TAG = "latest"
-        TRIVY_SERVER = "http://172.18.0.4:4954"
+        TRIVY_SERVER = "http://trivy-server:4954"
         NEXUS_REPO = "myregistry.local/docker-repo" // Korrigierte URL der Nexus-Registry
         NEXUS_URL = "https://myregistry.local" // URL für das Hochladen der Trivy-Ergebnisse
         MONITORING_NETWORK = "monitoring-net"
@@ -41,21 +41,17 @@ pipeline {
                 script {
                     withCredentials([usernamePassword(credentialsId: '7211db4a-9c31-434c-8a12-44e0667143fb', usernameVariable: 'NEXUS_USER', passwordVariable: 'NEXUS_PASS')]) {
                         sh """
-                        echo "Starte Trivy-Scan"
-                        docker run --name trivy_scan_container --network jenkins \
-                        -v /var/run/docker.sock:/var/run/docker.sock \
-                        aquasec/trivy image --server ${TRIVY_SERVER} \
-                        --format json --output trivy-results.json --severity HIGH,CRITICAL ${IMAGE_NAME}:${IMAGE_TAG}
-                        
-                        echo "Überprüfe Trivy-Scan-Ausgabe"
-                        ls -la /var/jenkins_home/workspace/cra_check_pipeline
+                        docker run --rm \
+                          -v /var/run/docker.sock:/var/run/docker.sock \
+                          -v /var/jenkins_home/workspace/trivy_results:/trivy_results \
+                          aquasec/trivy image --server ${TRIVY_SERVER} \
+                          --format json \
+                          --output /trivy_results/trivy-results.json \
+                          --severity HIGH,CRITICAL ${IMAGE_NAME}:${IMAGE_TAG}
 
-                        echo "Entferne Trivy-Container"
-                        docker rm trivy_scan_container || true
-
-                        echo "Sende Scan-Report an Nexus"
-                        curl -k -v -u \$NEXUS_USER:\$NEXUS_PASS --upload-file /var/jenkins_home/workspace/cra_check_pipeline/trivy-results.json \
-                        ${NEXUS_URL}/repository/trivy-results/trivy-results-\$(date +%Y%m%d%H%M%S).json
+                        curl -k -u \$NEXUS_USER:\$NEXUS_PASS \
+                          --upload-file /var/jenkins_home/workspace/trivy_results/trivy-results.json \
+                          ${NEXUS_URL}/repository/trivy-results/trivy-results-\$(date +%Y%m%d%H%M%S).json
                         """
                     }
                 }
