--- a/jenkinsfile
+++ b/jenkinsfile
@@ -43,15 +43,15 @@ pipeline {
                         sh """
                         docker run --rm \
                           -v /var/run/docker.sock:/var/run/docker.sock \
-                          -v /var/jenkins_home/workspace/cra_check_pipeline/trivy_results:/trivy_results \
+                          -v /var/jenkins_home/workspace/cra_check_pipeline:/workspace \
                           aquasec/trivy image \
                           --format json \
-                          --output /trivy_results/trivy-results.json \
+                          --output /workspace/trivy-results.json \
                           --severity HIGH,CRITICAL \
                           ${IMAGE_NAME}:${IMAGE_TAG}
 
                         curl -k -u \$NEXUS_USER:\$NEXUS_PASS \
-                          --upload-file /var/jenkins_home/workspace/trivy_results/trivy-results.json \
+                          --upload-file /var/jenkins_home/workspace/cra_check_pipeline/trivy-results.json \
                           ${NEXUS_URL}/repository/trivy-results/trivy-results-\$(date +%Y%m%d%H%M%S).json
                         """
                     }
