--- a/jenkinsfile
+++ b/jenkinsfile
@@ -41,6 +41,7 @@ pipeline {
                 script {
                     sh """
                     OUTPUT_FILE=/workspace/trivy-results.json
+                    WORKSPACE_FILE=\${WORKSPACE}/trivy-results.json
 
                     docker run --rm \
                       -v /var/run/docker.sock:/var/run/docker.sock \
@@ -50,6 +51,8 @@ pipeline {
                       --output \$OUTPUT_FILE \
                       --severity HIGH,CRITICAL \
                       ${IMAGE_NAME}:${IMAGE_TAG}
+
+                    cp \$OUTPUT_FILE \$WORKSPACE_FILE
                     """
 
                     nexusArtifactUploader(
@@ -61,7 +64,7 @@ pipeline {
                         repository: 'trivy-results',
                         credentialsId: '7211db4a-9c31-434c-8a12-44e0667143fb',
                         artifacts: [
-                            [artifactId: 'trivy-results', classifier: '', file: '/workspace/trivy-results.json', type: 'json']
+                            [artifactId: 'trivy-results', classifier: '', file: 'trivy-results.json', type: 'json']
                         ]
                     )
                 }
