--- a/jenkinsfile
+++ b/jenkinsfile
@@ -46,7 +46,7 @@ pipeline {
                       --format json \
                       --output trivy-results-$(date +%Y%m%d%H%M%S).json \
                       --severity HIGH,CRITICAL \
-                      ${IMAGE_NAME}:${IMAGE_TAG}
+                      openplc:latest
                     """
                     sh 'ls -lah'
                 }
