--- a/jenkinsfile
+++ b/jenkinsfile
@@ -40,16 +40,16 @@ pipeline {
             steps {
                 script {
                     sh """
-                    TIMESTAMP=\$(date +%Y%m%d%H%M%S)
                     docker run --rm \
                       -v /var/run/docker.sock:/var/run/docker.sock \
+                      -v \${WORKSPACE}:/workspace \
                       aquasec/trivy image \
                       --format json \
-                      --output trivy-results-\${TIMESTAMP}.json \
+                      --output /workspace/trivy-results-\$(date +%Y%m%d%H%M%S).json \
                       --severity HIGH,CRITICAL \
                       \${IMAGE_NAME}:\${IMAGE_TAG}
 
-                    ls -lah
+                    ls -lah /workspace
                     """
                 }
             }
@@ -86,7 +86,7 @@ pipeline {
                 }
             }
         }
-        */
+        
         stage('Deploy OpenPLC for Testing') {
             steps {
                 script {
@@ -196,3 +196,4 @@ pipeline {
         }
     }
 }
+*/
