--- a/jenkinsfile
+++ b/jenkinsfile
@@ -40,6 +40,9 @@ pipeline {
             steps {
                 script {
                     sh """
+                    export IMAGE_NAME="openplc"
+                    export IMAGE_TAG="latest"
+
                     export TRIVY_MODE=standalone
                     export TRIVY_CACHE_DIR=/var/jenkins_home/.cache/trivy
 
@@ -55,7 +58,7 @@ pipeline {
                       --format json \
                       --output \$OUTPUT_FILE \
                       --severity HIGH,CRITICAL \
-                      openplc:latest
+                      "\$IMAGE_NAME:\$IMAGE_TAG"
 
                     ls -lah \${WORKSPACE}
                     """
