--- a/jenkinsfile
+++ b/jenkinsfile
@@ -39,29 +39,18 @@ pipeline {
         stage('Scan Docker Image') {
             steps {
                 script {
-                    sh """
-                    export IMAGE_NAME="openplc"
-                    export IMAGE_TAG="latest"
-
+                    sh '''
                     export TRIVY_MODE=standalone
                     export TRIVY_CACHE_DIR=/var/jenkins_home/.cache/trivy
 
-                    TIMESTAMP=\$(date +%Y%m%d%H%M%S)
-                    OUTPUT_FILE=\${WORKSPACE}/trivy-results-\$TIMESTAMP.json
+                    TIMESTAMP=$(date +%Y%m%d%H%M%S)
+                    OUTPUT_FILE=${WORKSPACE}/trivy-results-$TIMESTAMP.json
 
-                    # Schwachstellen-Datenbank vor dem Scan aktualisieren
-                    /var/jenkins_home/bin/trivy image --download-db-only
+                    echo "Finaler Trivy-Befehl wird ausgeführt:"
+                    trivy image openplc:latest --scanners vuln --format json --output $OUTPUT_FILE --severity HIGH,CRITICAL
 
-                    # Scan ausführen
-                    /var/jenkins_home/bin/trivy image \
-                      --scanners vuln \
-                      --format json \
-                      --output \$OUTPUT_FILE \
-                      --severity HIGH,CRITICAL \
-                      "\$IMAGE_NAME:\$IMAGE_TAG"
-
-                    ls -lah \${WORKSPACE}
-                    """
+                    ls -lah ${WORKSPACE}
+                    '''
                 }
             }
         }
